--- a/app/imports/ui/pages/games/games-page.html
+++ b/app/imports/ui/pages/games/games-page.html
@@ -65,7 +65,7 @@
     <div class="field" style="align-content: center; color: black; font-size: large">
     <div class="ui four column doubling stackable grid container">
       <div class="column">
-        {{game.title}}
+        {{game.gameName}}
 
         <img class="ui small image" style="max-height:150px;padding: 5px" src="{{game.picture}}">
 
@@ -84,7 +84,7 @@
             <i class="ui circular hourglass empty inverted big icon avatar image"></i>
             <div class="content">
               <div class="header">Start Time</div>
-              {{game.start}}
+              {{game.startTime}}
             </div>
           </div>
           <!-- End Game Length -->
