conncetd and modified gameName to title

--- a/app/imports/ui/pages/addGame/addGame.html
+++ b/app/imports/ui/pages/addGame/addGame.html
@@ -357,8 +357,8 @@
       $('.ui.form')
           .form({
             fields: {
-              gameName: {
-                identifier  : 'gameName',
+              title: {
+                identifier  : 'title',
                 rules: [
                   {
                     type   : 'empty',
