reformat manage game page

--- a/app/imports/ui/pages/games/games-page.html
+++ b/app/imports/ui/pages/games/games-page.html
@@ -87,7 +87,7 @@
               {{game.startTime}}
             </div>
           </div>
-          <!-- End Game Length -->
+          <!-- End Start time -->
 
           <!-- Location -->
           <div class="item">
