--- a/app/imports/ui/pages/user/manage-page.html
+++ b/app/imports/ui/pages/user/manage-page.html
@@ -2,12 +2,15 @@
 
   <div class="ui borderless menu">
     <div class="ui container" style="height: 70px;">
-      <div class="item" ><h1>Manage Your Games!</h1></div>
+      <div class="item"><h1>Manage Your Games!</h1></div>
       <div class=" item">
-        <button class="ui button" ><a class="{{isActiveRoute "Games_Page"}} item" href="{{pathFor "Games_Page" username=routeUserName}}">Browse Games</a></button>
+        <button class="ui button"><a class="{{isActiveRoute "Games_Page"}} item"
+                                     href="{{pathFor "Games_Page" username=routeUserName}}">Browse Games</a></button>
       </div>
       <div class=" item">
-        <button class="ui button"> <a class="{{isActiveRoute "NewGame_Page"}} item" href="{{pathFor "AddGame_Page" username=routeUserName}}">Coordinate a Game!</a></button>
+        <button class="ui button"><a class="{{isActiveRoute "NewGame_Page"}} item"
+                                     href="{{pathFor "AddGame_Page" username=routeUserName}}">Coordinate a Game!</a>
+        </button>
       </div>
     </div>
   </div>
@@ -23,101 +26,102 @@
 
   -->
 
-  <div class="item" ><center><h1>Games You're Running</h1></center></div>
-  {{#each game in runningList}}
-  <p></p>
+  <div class="item">
+    <center><h1>Games You're Running</h1></center>
+  </div>
+{{#each game in runningList}}
+    <p></p>
   <div>
-    <form class="ui card games-data-form " style=" padding-top:5px;width:95%;position:static;">
-      <div class="field" style="align-content: center; color: black; font-size: large">
-        <div class="ui four column doubling stackable grid container">
-          <div class="column">
-            {{game.gameName}}
-            <img class="ui small image" style="max-height:150px;padding: 5px" src="{{game.picture}}">
+  <form class="ui card games-data-form " style=" padding-top:5px;width:95%;position:static;">
+  <div class="field" style="align-content: center; color: black; font-size: large">
+  <div class="ui four column doubling stackable grid container">
+    <div class="column">
+      {{game.gameName}}
+      <img class="ui small image" style="max-height:150px;padding: 5px" src="{{game.picture}}">
+    </div>
+    <div class="column">
+      <div class="ui list">
+        <div class="item">
+          <i class="ui circular calender inverted big icon avatar image"></i>
+          <div class="content">
+            <div class="header">When</div>
+            {{game.date}}
           </div>
-          <div class="column">
-            <div class="ui list">
-              <!-- Max Players -->
-              <div class="item">
-                <i class="ui circular user inverted big icon avatar image" ></i>
-                <div class="content">
-                  <div class="header">max players</div>
-                  {{game.maxPlayers}}
-                </div>
-              </div>
-              <!-- End Max Players -->
-
-              <!-- Game Length -->
-              <div class="item">
-                <i class="ui circular hourglass empty inverted big icon avatar image" ></i>
-                <div class="content">
-                  <div class="header">Game length</div>
-                  {{game.gameLength}}
-                </div>
-              </div>
-              <!-- End Game Length -->
-
-              <!-- Location -->
-              <div class="item">
-                <img class="ui avatar image" src="/images/bldg.png">
-                <div class="content">
-                  <div class="header">Location</div>
-                  {{game.location}}
-                </div>
-              </div>
-              <!-- End Location -->
-            </div>
+        </div>
+        <!-- Start Time -->
+        <div class="item">
+          <i class="ui circular hourglass empty inverted big icon avatar image"></i>
+          <div class="content">
+            <div class="header">Start Time</div>
+            {{game.startTime}}
           </div>
-          <div class="column">
-            <div class="ui list">
-              <div class="item">
-                <i class="ui circular mail inverted big icon avatar image" ></i>
-                <div class="content">
-                  <div class="header">Contact</div>
-                  {{game.contact}}
-                </div>
-              </div>
-              <div class="item">
-                <i class="ui circular newspaper inverted big icon avatar image" ></i>
-                <div class="content">
-                  <div class="header">resources</div>
-                  {{game.resources}}
-                </div>
-              </div>
-              <div class="item">
-                <i class="ui circular calender inverted big icon avatar image" ></i>
-                <div class="content">
-                  <div class="header">When</div>
-                  <!-- put when in the db -->
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="column">
-            <div class="ui list">
-              <br>
-              <div class="item">
+        </div>
+        <!-- End Start time -->
 
-                <!--
+        <!-- Location -->
+        <div class="item">
+          <img class="ui avatar image" src="/images/bldg.png">
+          <div class="content">
+            <div class="header">Location</div>
+            {{game.location}}
+          </div>
+        </div>
+        <!-- End Location -->
+      </div>
+    </div>
+    <div class="column">
+      <div class="ui list">
+        <div class="item">
+          <i class="ui circular mail inverted big icon avatar image"></i>
+          <div class="content">
+            <div class="header">Contact</div>
+            {{game.contact}}
+          </div>
+        </div>
+        <div class="item">
+          <i class="ui circular newspaper inverted big icon avatar image"></i>
+          <div class="content">
+            <div class="header">Resources</div>
+            {{game.resources}}
+          </div>
+        </div>
+        <!-- Max Players -->
+        <div class="item">
+          <i class="ui circular user inverted big icon avatar image"></i>
+          <div class="content">
+            <div class="header">Maximum players</div>
+            {{game.maxPlayers}}
+          </div>
+        </div>
+        <!-- End Max Players -->
+      </div>
+    </div>
+  <div class="column">
+  <div class="ui list">
+    <br>
+  <div class="item">
+
+      <!--
                   {{else}}
-                    {{#if isOpen game._id}}
+  {{#if isOpen game._id}}
                        <button class="ui button blue joinGame" value="{{game._id}}" href="#" > Join Us!</button>
                     {{else}}
                      <button class="ui button red" value="{{game._id}}" href="#" > Game Is Full</button>
                     {{/if}}
 
-                  {{/if}}-->
-              </div>
-              <br>
-              <div class="item ">
-                <!-- <button class="ui button blue"> More Information</button> -->
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </form>
+{{/if}}-->
+</div>
+  <br>
+  <div class="item ">
+    <!-- <button class="ui button blue"> More Information</button> -->
   </div>
-  {{/each}}
+</div>
+</div>
+</div>
+</div>
+</form>
+</div>
+{{/each}}
 
   <!--
 
@@ -129,104 +133,106 @@
 
  -->
 
-  <div class="item" ><center><h1>Games You're Playing</h1></center></div>
+  <div class="item">
+    <center><h1>Games You're Playing</h1></center>
+  </div>
 
-  {{#each game in playingList}}
-  <p></p>
+{{#each game in playingList}}
+    <p></p>
   <div>
-    <form class="ui card games-data-form " style=" padding-top:5px;width:95%;position:static;">
-      <div class="field" style="align-content: center; color: black; font-size: large">
-        <div class="ui four column doubling stackable grid container">
-          <div class="column">
-            {{game.gameName}}
-            <img class="ui small image" style="max-height:150px;padding: 5px" src="{{game.picture}}">
+  <form class="ui card games-data-form " style=" padding-top:5px;width:95%;position:static;">
+  <div class="field" style="align-content: center; color: black; font-size: large">
+  <div class="ui four column doubling stackable grid container">
+    <div class="column">
+      {{game.gameName}}
+      <img class="ui small image" style="max-height:150px;padding: 5px" src="{{game.picture}}">
+    </div>
+    <div class="column">
+      <div class="ui list">
+        <!-- Max Players -->
+        <div class="item">
+          <i class="ui circular user inverted big icon avatar image"></i>
+          <div class="content">
+            <div class="header">max players</div>
+            {{game.maxPlayers}}
           </div>
-          <div class="column">
-            <div class="ui list">
-              <!-- Max Players -->
-              <div class="item">
-                <i class="ui circular user inverted big icon avatar image" ></i>
-                <div class="content">
-                  <div class="header">max players</div>
-                  {{game.maxPlayers}}
-                </div>
-              </div>
-              <!-- End Max Players -->
+        </div>
+        <!-- End Max Players -->
 
-              <!-- Game Length -->
-              <div class="item">
-                <i class="ui circular hourglass empty inverted big icon avatar image" ></i>
-                <div class="content">
-                  <div class="header">Game length</div>
-                  {{game.gameLength}}
-                </div>
-              </div>
-              <!-- End Game Length -->
-
-              <!-- Location -->
-              <div class="item">
-                <img class="ui avatar image" src="/images/bldg.png">
-                <div class="content">
-                  <div class="header">Location</div>
-                  {{game.location}}
-                </div>
-              </div>
-              <!-- End Location -->
-            </div>
+        <!-- Game Length -->
+        <div class="item">
+          <i class="ui circular hourglass empty inverted big icon avatar image"></i>
+          <div class="content">
+            <div class="header">Game length</div>
+            {{game.gameLength}}
           </div>
-          <div class="column">
-            <div class="ui list">
-              <div class="item">
-                <i class="ui circular mail inverted big icon avatar image" ></i>
-                <div class="content">
-                  <div class="header">Contact</div>
-                  {{game.contact}}
-                </div>
-              </div>
-              <div class="item">
-                <i class="ui circular newspaper inverted big icon avatar image" ></i>
-                <div class="content">
-                  <div class="header">resources</div>
-                  {{game.resources}}
-                </div>
-              </div>
-              <div class="item">
-                <i class="ui circular calender inverted big icon avatar image" ></i>
-                <div class="content">
-                  <div class="header">When</div>
-                  <!-- put when in the db -->
-                </div>
-              </div>
-            </div>
+        </div>
+        <!-- End Game Length -->
+
+        <!-- Location -->
+        <div class="item">
+          <img class="ui avatar image" src="/images/bldg.png">
+          <div class="content">
+            <div class="header">Location</div>
+            {{game.location}}
           </div>
-          <div class="column">
-            <div class="ui list">
-              <br>
-              <div class="item">
+        </div>
+        <!-- End Location -->
+      </div>
+    </div>
+    <div class="column">
+      <div class="ui list">
+        <div class="item">
+          <i class="ui circular mail inverted big icon avatar image"></i>
+          <div class="content">
+            <div class="header">Contact</div>
+            {{game.contact}}
+          </div>
+        </div>
+        <div class="item">
+          <i class="ui circular newspaper inverted big icon avatar image"></i>
+          <div class="content">
+            <div class="header">resources</div>
+            {{game.resources}}
+          </div>
+        </div>
+        <div class="item">
+          <i class="ui circular calender inverted big icon avatar image"></i>
+          <div class="content">
+            <div class="header">When</div>
+            <!-- put when in the db -->
+          </div>
+        </div>
+      </div>
+    </div>
+  <div class="column">
+  <div class="ui list">
+    <br>
+  <div class="item">
 
-                <button class="ui button red leaveGame" value="{{game._id}}" href="#" onclick="false" > Leave Game</button>
+    <button class="ui button red leaveGame" value="{{game._id}}" href="#" onclick="false"> Leave Game</button>
 
-                <!--
+      <!--
                   {{else}}
-                    {{#if isOpen game._id}}
+  {{#if isOpen game._id}}
                        <button class="ui button blue joinGame" value="{{game._id}}" href="#" > Join Us!</button>
                     {{else}}
                      <button class="ui button red" value="{{game._id}}" href="#" > Game Is Full</button>
                     {{/if}}
 
-                  {{/if}}-->
-              </div>
-              <br>
-              <div class="item ">
-                <!-- <button class="ui button blue"> More Information</button> -->
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </form>
+{{/if}}-->
+</div>
+  <br>
+  <div class="item ">
+    <!-- <button class="ui button blue"> More Information</button> -->
   </div>
-  {{/each}}
+</div>
+</div>
+</div>
+</div>
+</form>
+</div>
+{{/each}}
 
 
 
