--- a/app/imports/ui/pages/user/manage-page.html
+++ b/app/imports/ui/pages/user/manage-page.html
@@ -149,25 +149,23 @@
     </div>
     <div class="column">
       <div class="ui list">
-        <!-- Max Players -->
+
         <div class="item">
-          <i class="ui circular user inverted big icon avatar image"></i>
+          <i class="ui circular calender inverted big icon avatar image"></i>
           <div class="content">
-            <div class="header">max players</div>
-            {{game.maxPlayers}}
+            <div class="header">When</div>
+            {{game.date}}
           </div>
         </div>
-        <!-- End Max Players -->
-
-        <!-- Game Length -->
+        <!-- Start Time -->
         <div class="item">
           <i class="ui circular hourglass empty inverted big icon avatar image"></i>
           <div class="content">
-            <div class="header">Game length</div>
-            {{game.gameLength}}
+            <div class="header">Start Time</div>
+            {{game.startTime}}
           </div>
         </div>
-        <!-- End Game Length -->
+        <!-- End Start time -->
 
         <!-- Location -->
         <div class="item">
@@ -192,17 +190,21 @@
         <div class="item">
           <i class="ui circular newspaper inverted big icon avatar image"></i>
           <div class="content">
-            <div class="header">resources</div>
+            <div class="header">Resources</div>
             {{game.resources}}
           </div>
         </div>
+        <!-- Max Players -->
         <div class="item">
-          <i class="ui circular calender inverted big icon avatar image"></i>
+          <i class="ui circular user inverted big icon avatar image"></i>
           <div class="content">
-            <div class="header">When</div>
-            <!-- put when in the db -->
+            <div class="header">Maximum players</div>
+            {{game.maxPlayers}}
           </div>
         </div>
+        <!-- End Max Players -->
+
+
       </div>
     </div>
   <div class="column">
