cleared eslint errors

--- a/app/imports/ui/pages/user/manage-page.html
+++ b/app/imports/ui/pages/user/manage-page.html
@@ -36,7 +36,7 @@
   <div class="field" style="align-content: center; color: black; font-size: large">
   <div class="ui four column doubling stackable grid container">
     <div class="column">
-      {{game.gameName}}
+      {{game.title}}
       <img class="ui small image" style="max-height:150px;padding: 5px" src="{{game.picture}}">
     </div>
     <div class="column">
@@ -144,7 +144,7 @@
   <div class="field" style="align-content: center; color: black; font-size: large">
   <div class="ui four column doubling stackable grid container">
     <div class="column">
-      {{game.gameName}}
+      {{game.title}}
       <img class="ui small image" style="max-height:150px;padding: 5px" src="{{game.picture}}">
     </div>
     <div class="column">
